--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
     "react": "^18",
+    "react-btcpay-paybutton": "^1.0.0",
     "react-dom": "^18"
   },
   "devDependencies": {
